--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-asgiref==3.5.2
+asgiref
 backports.zoneinfo==0.2.1
 certifi==2022.6.15
 charset-normalizer==2.1.0
-Django==4.0.6
+Django
 idna==3.3
-requests==2.28.1
+requests
 sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.9
